Fix the caption spacing around the edges
Rookie mistake, forgot to subtract from both sides (20 / 2 = 10)

[Finishes: #110272336]

--- a/src/components/assets/Banderole.sass
+++ b/src/components/assets/Banderole.sass
@@ -47,7 +47,7 @@
   position: relative
   top: 50%
   left: rem(10)
-  max-width: calc(100% - 10px)
+  max-width: calc(100% - #{em(20)})
 
 .BanderoleCaption > h1
   +sans-family
